...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Name*"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/productCaffeine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Caffeine*"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPrice"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/productDescription"
        android:layout_width="214dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productCaffeine"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/addProductbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescription"
        app:layout_constraintVertical_bias="0.333" />
...
            android:onClick="clickHome"
            android:text="Home"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickMenu"
            android:text="Menu"
...
