<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="Name"
        />

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:maxLength="50"
        android:singleLine="true"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:text="Description"
        />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Description"
        android:maxLength="50"
        android:singleLine="true"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:text="Price"
        />

    <TextView
        android:id="@+id/userCaffeine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productPrice"
        android:maxLength="50"
        android:singleLine="true"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:text="Caffeine"
        />

    <Button
        android:id="@+id/Add"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/userCaffeine"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/black"
        android:textSize="9sp" />



</RelativeLayout>